# online_bookstore

./: CMakeLists.txt  DeskTopNavBar.qml  LandingPageBanners.qml  MainPage.qml  MobileNavBar.qml  NavBar.qml  PhoneNavDrawer.qml  ViewsList.qml  index_fr_BE.ts  main.qml  online_bookstore_fr_BE.ts  qml.qrc
build-tests-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug/: CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-tests-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-654594c68a85f66c5ac2.json  cmakeFiles-v1-22a4bc7836a081f8c659.json  codemodel-v2-d6b6aea444f1c3dc1192.json  index-2022-01-26T10-09-10-0129.json  target-authentication-Debug-fc6e9230617a0bb56c14.json
forms/: BookPoster.qml  Constants.qml  CourseGrid.qml  DeskTopNavBar.qml  DirectoryFontFolder.qml  ItemObjects.qml  LoginForm.qml  LoginPage.qml  MainPage.qml  MobileNavBar.qml  PanelItem.qml  PhoneNavDrawer.qml  UploadBookForm.qml  main.qml  qml.qrc  qtquickcontrols2.conf  res.qrc
forms/models/: BooksListModel.qml  CategoriesModel.qml  NavBarListModel.qml  SubjectsListModel.qml
include/: SyApp.h  SyRequests.h
models/: LandingPageListModel.qml
scripts/: interface.js
src/: SyApp.cpp  SyRequests.cpp  main.cpp
tests/: CMakeLists.txt  SyTestSuite.cpp  SyTestSuite.h  main.cpp  tst_authentication.cpp
